# battleship-zk-cryptoproj

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_guests.sh
core/: Cargo.toml
core/src/: lib.rs
guests/: Cargo.toml  build.rs
guests/battleship/: Cargo.toml
host/: Cargo.toml
host/src/: board_display.rs  game_coordinator.rs  main.rs  network.rs  network_protocol.rs  ship_placement.rs
prebuilt/: methods.rs
