[package]
name = "battleship-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, features = ["std"] }

[dev-dependencies]
rand = { workspace = true }

[features]
rand = ["dep:rand"]