[package]
name = "battleship-guests"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = "2.3"

[dependencies]
risc0-zkvm = { version = "2.3" }

[dev-dependencies]
battleship-core = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

[package.metadata.risc0]
methods = ["battleship"]